--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wxik/react-form",
-  "version": "0.4.0",
+  "version": "0.3.10",
   "main": "dist/index.js",
   "types": "index.d.ts",
   "description": "react form",
@@ -9,31 +9,31 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dev": "cd example && yarn dev"
   },
   "dependencies": {
     "@wxik/observer": "^0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-proposal-decorators": "^7.18.9",
-    "@babel/plugin-proposal-export-default-from": "^7.18.9",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-proposal-decorators": "^7.19.0",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-proposal-function-bind": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.19.0",
     "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/react": "^18.0.15",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
     "prettier": "^2.7.1",
-    "rollup": "^2.77.0",
+    "rollup": "^2.79.0",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.3"
   },
   "peerDependencies": {
     "@wxik/core": "^0.5"
