--- a/package.json
+++ b/package.json
@@ -16,25 +16,16 @@
     "@wxik/observer": "^0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/plugin-proposal-decorators": "^7.19.0",
-    "@babel/plugin-proposal-export-default-from": "^7.18.10",
-    "@babel/plugin-proposal-function-bind": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-flow": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "@wxik/core": "^0.5.5",
+    "@babel/core": "^7.19.6",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "prettier": "^2.7.1",
-    "rollup": "^2.79.0",
-    "rollup-plugin-async": "^1.2.0",
+    "@wxik/core": "^0.5.5",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.8.3"
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "@wxik/core": "^0.5"
