--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wxik/react-form",
   "version": "0.3.10",
   "main": "dist/index.js",
-  "types": "index.d.ts",
+  "types": "dist/index.d.ts",
   "description": "react form",
   "license": "MIT",
   "publishConfig": {
@@ -22,8 +22,9 @@
     "@types/react-dom": "^18.0.8",
     "prettier": "^2.7.1",
     "@wxik/core": "^0.5.5",
-    "rollup": "^2.79.1",
+    "rollup": "^3.2.5",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-dts": "^5.0.0",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   },
