--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,10 @@
 {
-  "extends": ["react-app"],
+  "extends": ["react-app", "plugin:jsx-a11y/recommended"],
+  "plugins": ["jsx-a11y", "simple-import-sort"],
   "rules": {
     "import/first": "off",
     "@typescript-eslint/consistent-type-imports": "error",
-    "no-restricted-syntax": ["error", "LogicalExpression[operator='??']"]
-  },
-  "overrides": [
-    {
-      "files": ["**/__tests__/**"],
-      "plugins": ["jest"],
-      "extends": ["plugin:jest/recommended"]
-    }
-  ]
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error"
+  }
 }
