--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@rollup/plugin-typescript": "^11.1.0",
     "@rollup/plugin-terser": "^0.4.1",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "eslint": "^8.38.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.7",
     "rollup": "^3.20.6",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-dts": "^5.3.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
