--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src/**/*"],
-  "exclude": ["dist/**/*"],
+  "exclude": ["dist/**/*", "node_modules", "example/**/*"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
