--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wxik/react-form",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "react form",
@@ -8,6 +8,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://github.com/wxik/react-form",
   "scripts": {
     "build": "rollup -c",
     "dev": "cd example && yarn dev"
@@ -16,16 +17,16 @@
     "@nx-js/observer-util": "^4.3.0-alpha.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
+    "@babel/core": "^7.21.8",
     "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
-    "eslint": "^8.39.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "eslint": "^8.40.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.8",
-    "rollup": "^3.21.0",
+    "rollup": "^3.21.5",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.3.0",
     "tslib": "^2.5.0",
