--- a/example/package.json
+++ b/example/package.json
@@ -13,10 +13,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "prop-types": "^15.*",
-    "vite": "^4.3.1"
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9"
   }
 }
