--- a/example/package.json
+++ b/example/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "private": "true",
   "scripts": {
-    "dev": "vite --host 0.0.0.0"
+    "dev": "vite --host 0.0.0.0",
+    "doc:dev": "dumi dev",
+    "doc:build": "dumi build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@ibot/ibot": "0.7.0-dev.15",
     "@wxik/core": "^0.5.5",
     "classnames": "^2.3.2",
+    "dumi": "^2.2.1",
     "rc-select": "^12.1.13",
-    "@tailwindcss/forms": "^0.5.3",
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
