--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@wxik/react-form",
-  "version": "0.5.1",
+  "name": "@guc/react-form",
+  "version": "0.5.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "react form",
@@ -17,23 +17,24 @@
     "@nx-js/observer-util": "^4.3.0-alpha.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.3",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "eslint": "^8.48.0",
+    "@babel/core": "^7.28.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.3",
-    "rollup": "^3.28.1",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^6.0.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "prettier": "^3.6.2",
+    "rollup": "^3.29.5",
+    "rollup-plugin-delete": "^2.2.0",
+    "rollup-plugin-dts": "^6.2.1",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   },
   "files": [
     "dist",
     "README.md"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
