--- a/example/package.json
+++ b/example/package.json
@@ -2,29 +2,25 @@
   "name": "example",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "doc:dev": "dumi dev",
+    "dev": "dumi dev",
     "doc:build": "dumi build",
     "doc:preview": "dumi preview"
   },
   "dependencies": {
-    "@guc/core": "^0.6.0",
     "@guc/react-form": "link:../",
-    "@heroicons/react": "^2.0.18",
-    "@ibot/ibot": "0.7.0-dev.15",
-    "classnames": "^2.5.1",
+    "@heroicons/react": "^2.2.0",
+    "antd": "^6.2.0",
+    "clsx": "^2.1.1",
     "dumi": "^2.4.21",
-    "rc-select": "^12.1.13",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.21",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.0.5"
+    "tailwindcss": "^4.1.18"
   }
 }
