--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 20.x
+          yarn-version: 4.x
 
       # 打包代码
       - name: Build Project
